@@ -1,7 +1,10 @@
 package ru.practicum.stats.service;
 
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.server.ResponseStatusException;
 import ru.practicum.stats.dto.EndpointHitDto;
 import ru.practicum.stats.dto.StatsConstants;
 import ru.practicum.stats.dto.ViewStatsDto;
@@ -9,20 +12,17 @@ import ru.practicum.stats.mapper.StatsMapper;
 import ru.practicum.stats.repository.EndpointHitRepository;
 
 import java.time.LocalDateTime;
+import java.time.format.DateTimeParseException;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 @Service
+@RequiredArgsConstructor
 @Transactional(readOnly = true)
 public class StatsServiceImpl implements StatsService {
 
     private final EndpointHitRepository endpointHitRepository;
-
-    public StatsServiceImpl(EndpointHitRepository endpointHitRepository) {
-        this.endpointHitRepository = endpointHitRepository;
-    }
 
     @Override
     @Transactional
@@ -32,9 +32,17 @@ public class StatsServiceImpl implements StatsService {
 
     @Override
     public List<ViewStatsDto> getStats(String start, String end, List<String> uris, boolean unique) {
+
         LocalDateTime startTime = parseDateTime(start);
+
         LocalDateTime endTime = parseDateTime(end);
+
+        if (startTime.isAfter(endTime)) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Начало должно быть перед временем окончания.");
+        }
+
         List<String> uriFilter = uris == null ? Collections.emptyList() : uris;
+
         boolean urisEmpty = uriFilter.isEmpty();
 
         List<EndpointHitRepository.ViewStatsProjection> stats = unique
@@ -43,18 +51,14 @@ public class StatsServiceImpl implements StatsService {
 
         return stats.stream()
                 .map(StatsMapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    private ViewStatsDto toDto(EndpointHitRepository.ViewStatsProjection projection) {
-        ViewStatsDto dto = new ViewStatsDto();
-        dto.setApp(projection.getApp());
-        dto.setUri(projection.getUri());
-        dto.setHits(projection.getHits());
-        return dto;
+                .toList();
     }
 
     private LocalDateTime parseDateTime(String value) {
-        return LocalDateTime.parse(value, StatsConstants.DATE_TIME_FORMATTER);
+        try {
+            return LocalDateTime.parse(value, StatsConstants.DATE_TIME_FORMATTER);
+        } catch (DateTimeParseException ex) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Не получилось отформатировать дату.", ex);
+        }
     }
 }
